<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="summaryUpdaterInterval">How often should Updater service run?</string>
  	<string name="titleUpdaterInterval">Updater Interval</string>
    <string name="menu_settings">Settings</string>
    <string name="app_name">Yamba</string>
	<string name="titleYamba">Yamba</string>
	<string name="titleStatus">Status Update</string>
	<string name="hintText">Please enter your 140-character status</string>
	<string name="buttonUpdate">Update</string>
	<string name="menu_item_preferences_text">Preferences</string>
	<string name="menu_item_purge_text">Purge Data</string>
	<string name="prefs_username_title">User</string>
	<string name="prefs_username_summary">The user name</string>
	<string name="prefs_pwd_title">Password</string>
	<string name="prefs_pwd_summary">The user\'s password</string>
	<string name="prefs_url_title">URL</string>
	<string name="prefs_url_summary">The URL of base API</string>
	<string name="prefs_update_interval">Update Interval</string>
	<string name="prefs_update_interval_summary">Update Interval for the Service</string>
	<string name="menu_item_pull_now_text">Pull Now</string>
	<string name="titleRefresh">Refresh</string>
	<string name="titlePurge">Purge Data</string>
	<string name="titleServiceStop">Stop Service</string>
	<string name="titleServiceStart">Start Service</string>
	<string name="titleTimeline">Timeline</string>
	<string name="msgSetupPrefs">Please enter your username, password and server to use</string>
	<string name="msgAllDataPurged">All data has been purged</string>
	<string name="msgLastTimelineUpdate">Yamba Widget</string>
	<string name="send_timeline_notifications_permission_label">Sends Timeline Notifications</string>
  	<string name="send_timeline_notifications_permission_description">Allow this application to send timeline notifications to other applications</string>
  	<string name="receive_timeline_notifications_permission_label">Receive Timeline Notifications</string>
  	<string name="receive_timeline_notifications_permission_description">Allow this application to receive timeline notifications from other applications</string>
  	<string name="msgNotificationTitle">New Yamba Status Updates</string>
  	<string name="msgNotificationMessage">You\'ve got %d new status update(s)</string>
  	
  	<string-array name="interval">
	    <item>Never</item>
	    <item>Fifteen minutes</item>
	    <item>Half hour</item>
	    <item>An hour</item>
	    <item>Half day</item>
	    <item>Day</item>
  	</string-array>

	<string-array name="intervalValues">
	    <item>0</item>
	    <item>900000</item>
	    <item>1800000</item>
	    <item>3600000</item>
	    <item>43200000</item>
	    <item>86400000</item>
	</string-array>
</resources>