<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/prefs_username_title" android:summary="@string/prefs_username_summary" android:key="username" />
    <EditTextPreference android:title="@string/prefs_pwd_title" android:summary="@string/prefs_pwd_summary" android:key="password" android:password="true" />
    <EditTextPreference android:title="@string/prefs_url_title" android:summary="@string/prefs_url_summary" android:key="site_url" />
    <ListPreference android:entryValues="@array/intervalValues" android:summary="@string/summaryUpdaterInterval" android:title="@string/titleUpdaterInterval"
    				android:entries="@array/interval" android:key="interval"></ListPreference>
</PreferenceScreen>